--- a/src/pages/research/ising-model.astro
+++ b/src/pages/research/ising-model.astro
@@ -53,7 +53,7 @@ Kasteleyn, Temperley, Green, Hurst and more recently Barahona:`;
                     paired with the results of this paper:
                 </li>
                 <li>
-                    for every Non-Planar crystal lattice computing the parition
+                    for every Non-Planar crystal lattice computing the partition
                     functions for the finite sublattices is NP-complete, provide
                     an exact characterization for several of the most studied
                     Ising models. Our results settle at once, for several
@@ -65,7 +65,7 @@ Kasteleyn, Temperley, Green, Hurst and more recently Barahona:`;
             </ul>
             <p>
                 Our results axe obtained by establishing a Kuratowski-like
-                charcterization theorem for the class of (infinite) crystal
+                characterization theorem for the class of (infinite) crystal
                 lattices called Bravais lattices, that can also be extended to
                 general crystal structures. The "forbidden subgraph," called
                 Kuratowskian, plays the central role, being contained in every
