add solomon marcus' axioms

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -187,7 +187,26 @@ const essays: Publication[] = [
 
         <div>
             <h3 class="flex-1 text-2xl font-bold">Solomon Marcus's Axioms</h3>
-            <div class="py-4"></div>
+            <div class="py-4">
+                <EssayCard
+                    publication={{
+                        authors: ["Sorin Istrail"],
+                        title: "Professor Solomon Marcus' Axioms",
+                        journal: "",
+                        volume: "",
+                        year: 2023,
+                        pdf: "/papers/MarcusAxioms.pdf",
+                        tags: [],
+                    }}
+                />
+            </div>
+        </div>
+
+        <div>
+            <h3 class="flex-1 text-2xl font-bold">Albert Meyer's Axioms</h3>
+            <div class="py-4">
+                <p>In Progress</p>
+            </div>
         </div>
 
         <h2 class="flex-1 text-3xl font-bold pt-8">Essays</h2>
