add test of time award

--- a/src/layouts/ResearchLayout.astro
+++ b/src/layouts/ResearchLayout.astro
@@ -27,7 +27,7 @@ import "../styles/globals.css";
                 <h2 class="text-3xl font-bold pt-4">{title}</h2>
                 <h3 class="text-2xl font-bold py-8">Research Summary</h3>
                 <slot name="abstract" />
-                <slot name="sorinfest" />
+                <slot />
                 <slot name="quote" />
 
                 <h3 class="text-2xl font-bold py-8">Relevant Papers</h3>
