--- a/src/pages/research/ising-model.astro
+++ b/src/pages/research/ising-model.astro
@@ -96,7 +96,7 @@ Kasteleyn, Temperley, Green, Hurst and more recently Barahona:`;
         </Abstract>
     </div>
 
-    <div slot="sorinfest">
+    <div>
         <h3 class="text-2xl font-bold py-4">SorinFest</h3>
         <p class="pb-8">
             Lars Onsager, Brown University Professor of Chemistry from 1928-1933
