update position card dates

--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -168,13 +168,13 @@ const essays = [
             img={recomb}
             position="Co-Founder and Steering Committee Member"
             location="International Conference on Research in Computational Biology"
-            time="1997 — ???"
+            time="1997 — Present"
         />
         <PositionCard
             img={jcb}
             position="Co-Editor-In-Chief"
             location="Journal of Computational Biology"
-            time="1994 — ???"
+            time="2000 — 2020"
         />
         <PositionCard
             img={neumann}
