--- a/src/pages/lectures/von-neumann-2015.astro
+++ b/src/pages/lectures/von-neumann-2015.astro
@@ -2,14 +2,30 @@
 import Layout from "../../layouts/Layout.astro";
 import poster1 from "../../assets/posters/2015_poster_final-1.png";
 import poster2 from "../../assets/posters/2015_poster_final-2.png";
+import EssayCard from "@/components/EssayCard";
 ---
 
 <Layout title="Istrail Lab | John von Neumann Lectures">
-    <h1 class="font-bold text-center text-3xl">John von Neumann Lectures</h1>
-    <h2 class="font-bold text-center text-2xl">
-        Brown University Symposium 2015
+    <h1 class="font-bold text-3xl pt-4">John von Neumann Lectures 2015</h1>
+    <h2 class="font-bold text-2xl py-2">
+        250th Anniversary Symposium: The Next 250 Years
     </h2>
-    <div class="flex flex-row gap-10">
+
+    <div class="py-4">
+        <EssayCard
+            publication={{
+                authors: ["Sorin Istrail", "Tracie Sweeney"],
+                title: "Randomness is Beautiful: in Search of von Neumann",
+                journal: "Conduit",
+                volume: "9",
+                year: 2006,
+                pdf: "/papers/Randomness is Beautiful: in Search of von Neumann.pdf",
+                tags: [],
+            }}
+        />
+    </div>
+
+    <div class="flex gap-10">
         <div class="basis-1/2 carousel rounded-box">
             <div class="carousel-item w-full">
                 <img src={poster1} class="w-full" />
@@ -19,7 +35,9 @@ import poster2 from "../../assets/posters/2015_poster_final-2.png";
             </div>
         </div>
         <div class="basis-1/2">
-            <h3>Sweatbox Q&A</h3>
+            <h3 class="font-semibold text-xl py-2">
+                Format of the Sweatbox Q&A
+            </h3>
             <p>
                 Funded by the National Science Foundation as a workshop called
                 "Q&A Boot Camp at Brown University: Asking Tough Scientific
@@ -48,6 +66,263 @@ import poster2 from "../../assets/posters/2015_poster_final-2.png";
                 thermodynamic error. Our “Sweatbox” is so named to honor
                 Professor Davidson's academic legacy.
             </p>
+        </div>
+    </div>
+
+    <div class="grid gap-4 py-4">
+        <div>
+            <h3 class="font-semibold text-xl py-2">Opening Remarks</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/zhIFAntHx2w?si=nNJkPjZBRn7znMG6"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Susanne Schennach</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/JNZhRZVqXRU?si=ybxUsanvexC3hvf_"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Mark Satterthwaite</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/41jmlUYB3-o?si=7LAwQnOBtKYQHAeY"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Vincent Crawford</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/LBwe2mLMpBU?si=DAPXzUdWcgw0TPyH"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Sweatbox Session: Satterthwaite, Crawford and Arrow
+            </h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/mQW8Z3Sf5so?si=klfZfs4nwmWYvMEb"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Freeman Dyson</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/lWbKpkbT0QA?si=-u-kIV2UxEaXRB3f"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Frank Wilczek</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/7UyCR7rnqWg?si=jD7Qkg8T8PvnluLA"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Leon Cooper</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/k9GJ4Wx1Giw?si=XJCvtGGJQ_0WDi22"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Michael Jordan</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/H5VFuKe8kc8?si=x93pLnQy1jukOkgI"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Nima Arkani-Hamid</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/2eSkse9XdZ4?si=E5dQvc7CLd0MB4LG"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Sweatbox Session: Dyson, Cooper, Arkani-Hamid, Wilczeck
+            </h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/-HI49HcjMFQ?si=47zstdL2K9aJSAJ-"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Tom Leighton</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/TW1bGZFI50s?si=ZqNSW3_S6NvH8W2I"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Christos Papadimitriou</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/D6zqYUuOmdQ?si=PFEzk3OiEtvo6ez6"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Leslie Valiant</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/mCBYiTFLgMg?si=9l3G382b2HKDd7Eh"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Sweatbox Session: Leighton
+            </h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/Nn7WWnO2Xd4?si=n4vvW6Ypu0OLxjHH"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Sweatbox Session: Valiant and Papadimitriou
+            </h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/bgYV7BbcMLQ?si=oXkI2Y3tF4AbEPCK"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">David Berson</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/V6R5PK74DHE?si=f3wPElzs5XxEsGkD"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Kenneth Arrow</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/egV0Ale7dp0?si=IzW_fwNCZQkGbFWz"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">Patricia Churchland</h3>
+            <iframe
+                class="mx-auto"
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/cB3nsWfh7qk?si=lagOimDS2N9pDOO2"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
         </div>
     </div>
 </Layout>
