--- a/src/pages/media-coverage.astro
+++ b/src/pages/media-coverage.astro
@@ -29,7 +29,7 @@ import Layout from "@/layouts/Layout.astro";
                 November 20, 2006<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/06-055.html"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/06-055.html"
                     target="_blank"
                 >
                     "Brown Symposium Highlights Next Wave in Biology and
@@ -54,7 +54,7 @@ import Layout from "@/layouts/Layout.astro";
                 November 20, 2006<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/06-055.html"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/06-055.html"
                     target="_blank"
                 >
                     "Brown Symposium Highlights Next Wave in Biology and
@@ -67,7 +67,7 @@ import Layout from "@/layouts/Layout.astro";
                 November 10, 2006<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/11-10-06Brown_urchin.html"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/11-10-06Brown_urchin.html"
                     target="_blank"
                 >
                     "Surprise! Your cousin's a sea urchin"</a
@@ -79,7 +79,7 @@ import Layout from "@/layouts/Layout.astro";
                 November 9, 2006<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/06-052.html"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/06-052.html"
                     target="_blank"
                 >
                     "Sea Urchin Genome Is a Biology Boon and a Computational
@@ -92,7 +92,7 @@ import Layout from "@/layouts/Layout.astro";
                 Spring 2006<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/Conduitv910-15.pdf"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/Conduitv910-15.pdf"
                     target="_blank"
                 >
                     "Randomness is Beautiful: In Search of von Neumann"</a
@@ -104,7 +104,7 @@ import Layout from "@/layouts/Layout.astro";
                 February 19, 2004<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/TheScientistCeleradefendshumansequence.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/TheScientistCeleradefendshumansequence.htm"
                     target="_blank"
                 >
                     "Celera defends human sequence"</a
@@ -115,7 +115,7 @@ import Layout from "@/layouts/Layout.astro";
                 March 2001<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/Identifying_an_Intractable_Scientific_Problem.pdf"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/Identifying_an_Intractable_Scientific_Problem.pdf"
                     target="_blank"
                 >
                     Identifying an Intractable Scientific Problem</a
@@ -127,7 +127,7 @@ import Layout from "@/layouts/Layout.astro";
                 2000<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/ising_model_np_complete.pdf"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/ising_model_np_complete.pdf"
                     target="_blank"
                 >
                     The Ising Model is NP-complete</a
@@ -140,7 +140,7 @@ import Layout from "@/layouts/Layout.astro";
                 June 2, 2000<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/Science_2_June_2000.pdf"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/Science_2_June_2000.pdf"
                     target="_blank"
                 >
                     MATHEMATICS: Statistical Physicists Phase Out a Dream</a
@@ -152,7 +152,7 @@ import Layout from "@/layouts/Layout.astro";
                 April 26, 2000<br />
                 <a
                     class="underline text-blue-400"
-                    href="http://www.brown.edu/Research/Istrail_Lab/media/Ising-Istrail-media%20coverage/The%20Ising%20on%20the%20cake.htm"
+                    href="http://www.brown.edu/Research/Ishttps://www.brown.edu/Research/Istrail_Lab/trail_Lab/media/Ising-Istrail-media%20coverage/The%20Ising%20on%20the%20cake.htm"
                     target="_blank"
                 >
                     PHYSICS: The Ising on the Cake</a
@@ -164,7 +164,7 @@ import Layout from "@/layouts/Layout.astro";
                 April 24, 2000<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/Sandia press release ising.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/Sandia press release ising.htm"
                     target="_blank"
                 >
                     "Why, in Superbowl of statistical mechanics, famous players
@@ -179,7 +179,7 @@ import Layout from "@/layouts/Layout.astro";
                 March 6, 1999<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/ScienceNews protein folding mistakes fob6.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/ScienceNews protein folding mistakes fob6.htm"
                     target="_blank"
                 >
                     "Simulations nab protein-folding mistakes"</a
@@ -191,7 +191,7 @@ import Layout from "@/layouts/Layout.astro";
                 March 1, 1999<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/Scientific American To fold or not to fold.cfm.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/Scientific American To fold or not to fold.cfm.htm"
                     target="_blank"
                 >
                     "To fold or not to fold"</a
@@ -203,7 +203,7 @@ import Layout from "@/layouts/Layout.astro";
                 Feb. 25, 1999<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/990225072549.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/990225072549.htm"
                     target="_blank"
                 >
                     "Protein Adulstery Revealed ? Mechanism of protein folding
@@ -216,7 +216,7 @@ import Layout from "@/layouts/Layout.astro";
                 May — June 1998<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/15717.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/15717.htm"
                     target="_blank"
                 >
                     American Scientist</a
@@ -240,7 +240,7 @@ import Layout from "@/layouts/Layout.astro";
                 Januray 13, 1996<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/Sandia Labs reslease re RECOMB 97.htm"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/Sandia Labs reslease re RECOMB 97.htm"
                     target="_blank"
                 >
                     "Computational Molecular Biology Conference Attracts O.J.
@@ -252,7 +252,7 @@ import Layout from "@/layouts/Layout.astro";
                 September 1995<br />
                 <a
                     class="underline text-blue-400"
-                    href="media/folding_proteins_fast.pdf"
+                    href="https://www.brown.edu/Research/Istrail_Lab/media/folding_proteins_fast.pdf"
                     target="_blank"
                 >
                     "Folding Proteins Fast"</a
