add youtube channel

--- a/src/pages/lectures/youtube.astro
+++ b/src/pages/lectures/youtube.astro
@@ -1,146 +1,106 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import EssayCard from "@/components/EssayCard";
 ---
 
 <Layout title="Istrail Lab | Solomon Marcus Lectures">
-    <h1 class="font-bold text-3xl pt-4">
-        Solomon Marcus Guest Lectures at Brown
-    </h1>
+    <h1 class="font-bold text-3xl pt-4">Istrail Laboratory Youtube Channel</h1>
 
-    <div class="py-4">
-        <EssayCard
-            publication={{
-                authors: ["Sorin Istrail"],
-                title: "Professor Solomon Marcus' Axioms",
-                journal: "",
-                volume: "",
-                year: 2023,
-                pdf: "/papers/MarcusAxioms.pdf",
-                tags: [],
-            }}
-        />
-    </div>
-
-    <div class="grid gap-4 py-4">
+    <div class="grid gap-4">
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 1: The Loneliness of the Mathematican
+                J. Craig Venter - Genomics: From Medicine to the Environment
             </h3>
-            <h4 class="font-semibold text-lg py-1">
-                A John von Neumann Distinguished Lecture
-            </h4>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/12C6ataTArM?si=SPwQH_pxWFcpIAjw"
+                src="https://www.youtube.com/embed/zU6nVcvZyy4?si=hiG7FHlK3VaYKvdZ"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 2: To Prove or Not to Prove, That is the Question!
+                John Conway - The Game of Life and Set Theory
             </h3>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/uU49OWxnWBY?si=qyquNGQOnhe0s6_t"
+                src="https://www.youtube.com/embed/cQUAwhhC8cU?si=kgg8Q21kq8afMrmS"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 3: Science Today versus Science Yesterday
+                John Conway Distinguished Lecture - The Symmetries of Things
             </h3>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/A2qEzRSiSSw?si=TCas9-rw60yASezk"
+                src="https://www.youtube.com/embed/8z6T-7ovA5Q?si=XBM--9yncvnk9H8D"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 4: We Are Surrounded By Hidden Conflict
+                Samuel Broder - The Human Genome: Sequence and Assembly Was the
+                Easy Part
             </h3>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/NGK_Lh681aY?si=hE2_W3-EleE7nXgb"
+                src="https://www.youtube.com/embed/BBClgRwDc94?si=1Wtz5m68HWKIRBWl"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 5: Information: What Does It Mean?
+                Samuel Broder Distinguished Lecture - Lessons in Treating the
+                "Untreatable"
             </h3>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/97HoZHJDiNw?si=Oc_q8KRQkNWTeyUd"
+                src="https://www.youtube.com/embed/oUpe3X-zbII?si=raTSSLRwkXeSpmHM"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 6: Mathematical Mistakes as a Source of Creativity
+                Jonathan Yewdell - How to Succeed in Science
             </h3>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/R3tIf8TOM-w?si=9kB--SrB-fq425VZ"
+                src="https://www.youtube.com/embed/ubyWe0bJ41s?si=qZ1ThyhrmcaFwS_E"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
         </div>
-
         <div>
             <h3 class="font-semibold text-xl py-2">
-                Lecture 7: The Biological Cell in Spectacle
+                Issam Zineh - Shortening The Translational Lag
             </h3>
             <iframe
                 class="mx-auto"
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/uKafHAEWfto?si=Oo9k86BuXZD7WtVV"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-        </div>
-
-        <div>
-            <h3 class="font-semibold text-xl py-2">
-                Lecture 8: Two Neighbors Ignoring Each Other: Infinite Words and
-                Formal Languages
-            </h3>
-            <iframe
-                class="mx-auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/EatiEwQaFCI?si=56KqRjPQe48LtZeC"
+                src="https://www.youtube.com/embed/yk9fadol2nw?si=1NVqbILJPQZr-dvt"
                 title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
