--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -142,13 +142,13 @@ const essays: Publication[] = [
                 <EssayCard
                     publication={{
                         authors: ["Sorin Istrail"],
-                        title: "Mike Waterman in a National Treasure",
+                        title: "Mike Waterman is a National Treasure",
                         journal:
                             '"Michael Waterman\'s Contributions to Computational Biology and Bioinformatics" Journal of Computational Biology',
                         volume: "29",
                         number: "7",
                         year: 2022,
-                        pdf: "/papers/EricDavidson-MasterOfTheUniverse-DevBiol2016 2.pdf",
+                        pdf: "/papers/Sorin_Waterman_contribution_JCB2022.pdf",
                         tags: [],
                     }}
                 />
