--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -99,19 +99,23 @@ const essays = [
     <p class="p-2">
         Before joining Brown, he was the Senior Director and Head of Informatics
         Research at Celera Genomics, where his group played a central role in
-        the construction of the sequence of the human genome; they co-authored
-        the 2001 Science article <a
+        the construction of the sequence of the human genome; they co-authored <a
             class="underline hover:text-blue-400"
             href="https://www.science.org/doi/10.1126/science.1058040"
             >"The Sequence of the Human Genome"</a
-        >, which, with over 12,000 citations to date, is one of the most cited
-        scientific paper. His group at Celera Genomics also built a powerful
-        suite of genome-wide algorithms that was used for the comparison of all
-        human genome assemblies to date. In 2002, his Celera group in
-        collaboration with the company ClearForrest won the ACM KDD Cup - the
-        top international data mining/machine learning competition. The
-        challenge then was the automatic annotation of a section of the
-        Drosophila genome.
+        > (Science, 2001) which, with over 20,000 citations to date, is one of the
+        most cited scientific paper. His group at Celera Genomics also built a powerful
+        suite of genome-assembly-to-genome-assembly alignment algorithms that was
+        used for the comparison of all human genome assemblies to date in the paper
+        <a
+            class="underline hover:text-blue-400"
+            href="https://doi.org/10.1073/pnas.0307971100"
+            >"Whole Genome Shotgun Assembly and Comparison of Human Genome
+            Assemblies"</a
+        > (PNAS 2004). In 2002, his Celera group in collaboration with the company
+        ClearForrest won the ACM KDD Cup - the top international data mining/machine
+        learning competition. The challenge then was the automatic annotation of
+        a section of the Drosophila genome.
     </p>
     <p class="p-2">
         In 2003, he joined the ranks of Applied Biosystems Science Fellows, one
@@ -120,29 +124,34 @@ const essays = [
         Project at Sandia National Laboratories (1992-2000). In 2000, he
         obtained the negative solution (computational intractability) of a 50
         years old unresolved problem in statistical mechanics, the
-        Three-Dimensional Ising Model Problem. This work was included in the Top
-        100 Most Important Discoveries of the U.S. Department of Energy's first
-        25 years, and as the 7th top achievement of DOE in Advanced Scientific
-        Computing.
+        <a
+            class="underline hover:text-blue-400"
+            href="/papers/Statistical Mechanics, Three-Dimensionality and NP-completeness.pdf"
+            >Three-Dimensional Ising Model Problem</a
+        > (STOC 2000). This work was included in the Top 100 Most Important Discoveries
+        of the U.S. Department of Energy's first 25 years, and as the 7th top achievement
+        of DOE in Advanced Scientific Computing.
     </p>
     <p class="p-2">
-        Professor Istrail's current research focuses on computational molecular
-        biology, human genetics and genome-wide associations studies, medical
-        bioinformatics of autism, multiple sclerosis, HIV, preterm labor and
-        viral immunology, algorithms and computational complexity, and
-        statistical physics. He is editor-in-chief of the Journal of
-        Computational Biology, and together with Pavel Pevzner and Mike
-        Waterman, he is co-founder with of the RECOMB Conference series,
-        co-editor of the MIT Press Computational Molecular Biology series, and
-        co-editor of the Springer-Verlag Lecture Notes in Bioinformatics series.
+        Professor Istrail's current research focuses on SNPs and haplotypes and
+        genome-wide association studies (GWAS), the regulatory genome and gene
+        regulatory networks, and protein folding algorithms; algorithms and
+        computational complexity; and statistical physics.
     </p>
-    <a
-        class="p-2 underline hover:text-blue-400"
-        href="/sorin-istrail/geneology.html"
-    >
-        He has Erdos number 2 and postcard-Erdos number 1. He has 9 links to
-        Euler and 11 links to Leibniz.
-    </a>
+    <p class="p-2">
+        He is the former Co-Editor-In-Chief of the Journal of Computational
+        Biology (2000 - 2020) and together with Pavel Pevnzer and Mike Waterman,
+        he is the co-founded the RECOMB Conference Series (Annual International
+        Conference on Computational Molecular Biology) in 1997. He is the
+        co-editor of the MIT Press Computational Molecular Biology series, and
+        co-editor of the Springer-Verlag Lecture Notes in Bioinfromatics series.
+    </p>
+    <p class="p-2">
+        He has Erdos number 2 and postcard-Erdos number 1. In the <a
+            class="underline hover:text-blue-400"
+            href="/sorin-istrail/genealogy.html">PhD advisor genealogy</a
+        > he has 9 links to Euler and 11 links to Leibniz.
+    </p>
 
     <div class="p-8 gap-4 grid grid-cols-3">
         <PositionCard
