--- a/src/pages/lectures/solomon-marcus.astro
+++ b/src/pages/lectures/solomon-marcus.astro
@@ -13,10 +13,10 @@ import EssayCard from "@/components/EssayCard";
             publication={{
                 authors: ["Sorin Istrail"],
                 title: "Professor Solomon Marcus' Axioms",
-                journal: "",
-                volume: "",
-                year: 2023,
-                pdf: "/papers/MarcusAxioms.pdf",
+                year: 2011,
+                journal:
+                    "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
+                pdf: "papers/MarcusAxioms.pdf",
                 tags: [],
             }}
         />
