--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -192,10 +192,10 @@ const essays: Publication[] = [
                     publication={{
                         authors: ["Sorin Istrail"],
                         title: "Professor Solomon Marcus' Axioms",
-                        journal: "",
-                        volume: "",
-                        year: 2023,
-                        pdf: "/papers/MarcusAxioms.pdf",
+                        year: 2011,
+                        journal:
+                            "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
+                        pdf: "papers/MarcusAxioms.pdf",
                         tags: [],
                     }}
                 />
