update marcus axioms link

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -195,7 +195,7 @@ const essays: Publication[] = [
                         year: 2011,
                         journal:
                             "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
-                        pdf: "papers/MarcusAxioms.pdf",
+                        pdf: "/papers/MarcusAxioms.pdf",
                         tags: [],
                     }}
                 />
