update more links

--- a/src/pages/lectures/solomon-marcus.astro
+++ b/src/pages/lectures/solomon-marcus.astro
@@ -16,7 +16,7 @@ import EssayCard from "@/components/EssayCard";
                 year: 2011,
                 journal:
                     "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
-                pdf: "papers/MarcusAxioms.pdf",
+                pdf: "/papers/MarcusAxioms.pdf",
                 tags: [],
             }}
         />
