--- a/src/pages/sorin-istrail/index.astro
+++ b/src/pages/sorin-istrail/index.astro
@@ -21,7 +21,7 @@ const essays = [
         authors: ["Sorin Istrail"],
         title: "Ode to Computational Biology: A letter in support of awarding the National Medal of Science to Professor Michael Waterman",
         year: 2012,
-        pdf: "papers/Ode to Computational Biology.pdf",
+        pdf: "/papers/Ode to Computational Biology.pdf",
         tags: [],
     },
     {
@@ -30,7 +30,7 @@ const essays = [
         year: 2011,
         journal:
             "Meetings with Marcus: 85th Birthday Celebration of Professor Solomon Marcus Editurea Academiei Romane",
-        pdf: "papers/MarcusAxioms.pdf",
+        pdf: "/papers/MarcusAxioms.pdf",
         tags: [],
     },
     {
@@ -39,7 +39,7 @@ const essays = [
         journal: "Conduit",
         volume: "19.1",
         year: 2010,
-        pdf: "papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
+        pdf: "/papers/When Professor Dijkstra Slapped Me in the Quest for Beautiful Code.pdf",
         tags: [],
     },
     {
@@ -48,7 +48,7 @@ const essays = [
         journal: "Conduit",
         volume: "17.2",
         year: 2008,
-        pdf: "papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
+        pdf: "/papers/Criticizing Professor Dijkstra Considered Harmless.pdf",
         tags: [],
     },
 ];
