add alberto axioms

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -203,6 +203,25 @@ const essays: Publication[] = [
         </div>
 
         <div>
+            <h3 class="flex-1 text-2xl font-bold">
+                Alberto Apostolico's Axioms
+            </h3>
+            <div class="py-4">
+                <EssayCard
+                    publication={{
+                        authors: ["Sorin Istrail"],
+                        title: "Trascina faccende, Alberto!",
+                        year: 2015,
+                        pages: "66-68",
+                        journal: "The Apoostolic Tales",
+                        pdf: "https://cpm.cs.helsinki.fi/Apostolic-Tales.pdf",
+                        tags: [],
+                    }}
+                />
+            </div>
+        </div>
+
+        <div>
             <h3 class="flex-1 text-2xl font-bold">Albert Meyer's Axioms</h3>
             <div class="py-4">
                 <p>In Progress</p>
